tests/spec/fail/multi_assign_arity_mismatch.aja
fuc pair() -> (int, int):
    return 1, 2

a, b, c = pair()
